@@ -1,3 +1,7 @@
+2023-03-05  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-gen.c (pkl_gen_pr_cast): Fix memory leak.
+
 2023-03-04  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-gen.c (pkl_gen_ps_type_any): Construct a value 0 for
